@@ -1,3 +1,8 @@
+master
+  - obsplus.bank.wavebank
+    * Added an optional 'detailed' flag to get_uptime_df to return each segment 
+      of contiguous data rather than just stats for each seed id.
+
 obsplus 0.2.3
   - obsplus.bank
     * Better support for bank paths on Windows See # 256.
